deploy/kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: credit-staging
---
apiVersion: v1
kind: Namespace
metadata:
  name: credit-prod
